# liboqs

./: CMakeLists.txt
src/kem/ledacrypt/: CMakeLists.txt  kem_ledacrypt.h  kem_ledacrypt_13397.c  kem_ledacrypt_16067.c  kem_ledacrypt_16229.c  kem_ledacrypt_19709.c  kem_ledacrypt_22901.c  kem_ledacrypt_23371.c  kem_ledacrypt_28277.c  kem_ledacrypt_28411.c  kem_ledacrypt_30803.c  kem_ledacrypt_35507.c  kem_ledacrypt_36629.c  kem_ledacrypt_40787.c  kem_ledacrypt_42677.c  kem_ledacrypt_48371.c  kem_ledacrypt_52667.c  kem_ledacrypt_58171.c  kem_ledacrypt_61717.c  kem_ledacrypt_83579.c  kem_ledacrypt_cpa_10883.c  kem_ledacrypt_cpa_13109.c  kem_ledacrypt_cpa_15373.c  kem_ledacrypt_cpa_21011.c  kem_ledacrypt_cpa_21611.c  kem_ledacrypt_cpa_25603.c  kem_ledacrypt_cpa_35339.c  kem_ledacrypt_cpa_7187.c  kem_ledacrypt_cpa_8237.c
src/kem/ledacrypt/ledacrypt_13397_avx2/: H_Q_matrices_generation.c  H_Q_matrices_generation.h  aes256.c  aes256.h  api.h  bf_decoding.c  bf_decoding.h  dfr_test.c  dfr_test.h  djbsort.c  djbsort.h  gf2x_arith.c  gf2x_arith.h  gf2x_arith_mod_xPplusOne.c  gf2x_arith_mod_xPplusOne.h  inverse_exp.c  inverse_exp.h  inverse_perm_tables.h  kem.c  niederreiter_decrypt.c  niederreiter_decrypt.h  niederreiter_encrypt.c  niederreiter_encrypt.h  niederreiter_keygen.c  niederreiter_keygen.h  qc_ldpc_parameters.h  rng.c  rng.h
src/kem/ledacrypt/ledacrypt_13397_clean/: H_Q_matrices_generation.c  H_Q_matrices_generation.h  aes256.c  aes256.h  api.h  bf_decoding.c  bf_decoding.h  dfr_test.c  dfr_test.h  djbsort.c  djbsort.h  gf2x_arith.c  gf2x_arith.h  gf2x_arith_mod_xPplusOne.c  gf2x_arith_mod_xPplusOne.h  kem.c  niederreiter_decrypt.c  niederreiter_decrypt.h  niederreiter_encrypt.c  niederreiter_encrypt.h  niederreiter_keygen.c  niederreiter_keygen.h  qc_ldpc_parameters.h  rng.c  rng.h
src/kem/ledacrypt/ledacrypt_16067_avx2/: H_Q_matrices_generation.c  H_Q_matrices_generation.h  aes256.c  aes256.h  api.h  bf_decoding.c  bf_decoding.h  dfr_test.c  dfr_test.h  djbsort.c  djbsort.h  gf2x_arith.c  gf2x_arith.h  gf2x_arith_mod_xPplusOne.c  gf2x_arith_mod_xPplusOne.h  inverse_exp.c  inverse_exp.h  inverse_perm_tables.h  kem.c  niederreiter_decrypt.c  niederreiter_decrypt.h  niederreiter_encrypt.c  niederreiter_encrypt.h  niederreiter_keygen.c  niederreiter_keygen.h  qc_ldpc_parameters.h  rng.c  rng.h
src/kem/ledacrypt/ledacrypt_16067_clean/: H_Q_matrices_generation.c  H_Q_matrices_generation.h  aes256.c  aes256.h  api.h  bf_decoding.c  bf_decoding.h  dfr_test.c  dfr_test.h  djbsort.c  djbsort.h  gf2x_arith.c  gf2x_arith.h  gf2x_arith_mod_xPplusOne.c  gf2x_arith_mod_xPplusOne.h  kem.c  niederreiter_decrypt.c  niederreiter_decrypt.h  niederreiter_encrypt.c  niederreiter_encrypt.h  niederreiter_keygen.c  niederreiter_keygen.h  qc_ldpc_parameters.h  rng.c  rng.h
src/kem/ledacrypt/ledacrypt_16229_avx2/: H_Q_matrices_generation.c  H_Q_matrices_generation.h  aes256.c  aes256.h  api.h  bf_decoding.c  bf_decoding.h  dfr_test.c  dfr_test.h  djbsort.c  djbsort.h  gf2x_arith.c  gf2x_arith.h  gf2x_arith_mod_xPplusOne.c  gf2x_arith_mod_xPplusOne.h  inverse_exp.c  inverse_exp.h  inverse_perm_tables.h  kem.c  niederreiter_decrypt.c  niederreiter_decrypt.h  niederreiter_encrypt.c  niederreiter_encrypt.h  niederreiter_keygen.c  niederreiter_keygen.h  qc_ldpc_parameters.h  rng.c  rng.h
src/kem/ledacrypt/ledacrypt_16229_clean/: H_Q_matrices_generation.c  H_Q_matrices_generation.h  aes256.c  aes256.h  api.h  bf_decoding.c  bf_decoding.h  dfr_test.c  dfr_test.h  djbsort.c  djbsort.h  gf2x_arith.c  gf2x_arith.h  gf2x_arith_mod_xPplusOne.c  gf2x_arith_mod_xPplusOne.h  gf2x_limbs.h  kem.c  niederreiter_decrypt.c  niederreiter_decrypt.h  niederreiter_encrypt.c  niederreiter_encrypt.h  niederreiter_keygen.c  niederreiter_keygen.h  qc_ldpc_parameters.h  rng.c  rng.h
src/kem/ledacrypt/ledacrypt_19709_avx2/: H_Q_matrices_generation.c  H_Q_matrices_generation.h  aes256.c  aes256.h  api.h  bf_decoding.c  bf_decoding.h  dfr_test.c  dfr_test.h  djbsort.c  djbsort.h  gf2x_arith.c  gf2x_arith.h  gf2x_arith_mod_xPplusOne.c  gf2x_arith_mod_xPplusOne.h  inverse_exp.c  inverse_exp.h  inverse_perm_tables.h  kem.c  niederreiter_decrypt.c  niederreiter_decrypt.h  niederreiter_encrypt.c  niederreiter_encrypt.h  niederreiter_keygen.c  niederreiter_keygen.h  qc_ldpc_parameters.h  rng.c  rng.h
src/kem/ledacrypt/ledacrypt_19709_clean/: H_Q_matrices_generation.c  H_Q_matrices_generation.h  aes256.c  aes256.h  api.h  bf_decoding.c  bf_decoding.h  dfr_test.c  dfr_test.h  djbsort.c  djbsort.h  gf2x_arith.c  gf2x_arith.h  gf2x_arith_mod_xPplusOne.c  gf2x_arith_mod_xPplusOne.h  kem.c  niederreiter_decrypt.c  niederreiter_decrypt.h  niederreiter_encrypt.c  niederreiter_encrypt.h  niederreiter_keygen.c  niederreiter_keygen.h  qc_ldpc_parameters.h  rng.c  rng.h
src/kem/ledacrypt/ledacrypt_22901_avx2/: H_Q_matrices_generation.c  H_Q_matrices_generation.h  aes256.c  aes256.h  api.h  bf_decoding.c  bf_decoding.h  dfr_test.c  dfr_test.h  djbsort.c  djbsort.h  gf2x_arith.c  gf2x_arith.h  gf2x_arith_mod_xPplusOne.c  gf2x_arith_mod_xPplusOne.h  inverse_exp.c  inverse_exp.h  inverse_perm_tables.h  kem.c  niederreiter_decrypt.c  niederreiter_decrypt.h  niederreiter_encrypt.c  niederreiter_encrypt.h  niederreiter_keygen.c  niederreiter_keygen.h  qc_ldpc_parameters.h  rng.c  rng.h
src/kem/ledacrypt/ledacrypt_22901_clean/: H_Q_matrices_generation.c  H_Q_matrices_generation.h  aes256.c  aes256.h  api.h  bf_decoding.c  bf_decoding.h  dfr_test.c  dfr_test.h  djbsort.c  djbsort.h  gf2x_arith.c  gf2x_arith.h  gf2x_arith_mod_xPplusOne.c  gf2x_arith_mod_xPplusOne.h  kem.c  niederreiter_decrypt.c  niederreiter_decrypt.h  niederreiter_encrypt.c  niederreiter_encrypt.h  niederreiter_keygen.c  niederreiter_keygen.h  qc_ldpc_parameters.h  rng.c  rng.h
src/kem/ledacrypt/ledacrypt_23371_avx2/: H_Q_matrices_generation.c  H_Q_matrices_generation.h  aes256.c  aes256.h  api.h  bf_decoding.c  bf_decoding.h  dfr_test.c  dfr_test.h  djbsort.c  djbsort.h  gf2x_arith.c  gf2x_arith.h  gf2x_arith_mod_xPplusOne.c  gf2x_arith_mod_xPplusOne.h  inverse_exp.c  kem.c  (+11 more)
(+1109 files in other folders)
