# SPDX-License-Identifier: MIT

set(_LEDACRYPT_OBJS "")

if(OQS_ENABLE_KEM_ledacrypt_23371)
    add_library(ledacrypt_23371_clean OBJECT kem_ledacrypt_23371.c ledacrypt_23371_clean/aes256.c ledacrypt_23371_clean/bf_decoding.c ledacrypt_23371_clean/dfr_test.c ledacrypt_23371_clean/djbsort.c ledacrypt_23371_clean/gf2x_arith.c ledacrypt_23371_clean/gf2x_arith_mod_xPplusOne.c ledacrypt_23371_clean/H_Q_matrices_generation.c ledacrypt_23371_clean/kem.c ledacrypt_23371_clean/niederreiter_decrypt.c ledacrypt_23371_clean/niederreiter_encrypt.c ledacrypt_23371_clean/niederreiter_keygen.c ledacrypt_23371_clean/rng.c)
    target_include_directories(ledacrypt_23371_clean PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ledacrypt_23371_clean)
    target_include_directories(ledacrypt_23371_clean PRIVATE ${PROJECT_SOURCE_DIR}/src/common/pqclean_shims)
    set(_LEDACRYPT_OBJS ${_LEDACRYPT_OBJS} $<TARGET_OBJECTS:ledacrypt_23371_clean>)
endif()

if(OQS_ENABLE_KEM_ledacrypt_16067)
    add_library(ledacrypt_16067_clean OBJECT kem_ledacrypt_16067.c ledacrypt_16067_clean/aes256.c ledacrypt_16067_clean/bf_decoding.c ledacrypt_16067_clean/dfr_test.c ledacrypt_16067_clean/djbsort.c ledacrypt_16067_clean/gf2x_arith.c ledacrypt_16067_clean/gf2x_arith_mod_xPplusOne.c ledacrypt_16067_clean/H_Q_matrices_generation.c ledacrypt_16067_clean/kem.c ledacrypt_16067_clean/niederreiter_decrypt.c ledacrypt_16067_clean/niederreiter_encrypt.c ledacrypt_16067_clean/niederreiter_keygen.c ledacrypt_16067_clean/rng.c)
    target_include_directories(ledacrypt_16067_clean PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ledacrypt_16067_clean)
    target_include_directories(ledacrypt_16067_clean PRIVATE ${PROJECT_SOURCE_DIR}/src/common/pqclean_shims)
    set(_LEDACRYPT_OBJS ${_LEDACRYPT_OBJS} $<TARGET_OBJECTS:ledacrypt_16067_clean>)
endif()

if(OQS_ENABLE_KEM_ledacrypt_13397)
    add_library(ledacrypt_13397_clean OBJECT kem_ledacrypt_13397.c ledacrypt_13397_clean/aes256.c ledacrypt_13397_clean/bf_decoding.c ledacrypt_13397_clean/dfr_test.c ledacrypt_13397_clean/djbsort.c ledacrypt_13397_clean/gf2x_arith.c ledacrypt_13397_clean/gf2x_arith_mod_xPplusOne.c ledacrypt_13397_clean/H_Q_matrices_generation.c ledacrypt_13397_clean/kem.c ledacrypt_13397_clean/niederreiter_decrypt.c ledacrypt_13397_clean/niederreiter_encrypt.c ledacrypt_13397_clean/niederreiter_keygen.c ledacrypt_13397_clean/rng.c)
    target_include_directories(ledacrypt_13397_clean PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ledacrypt_13397_clean)
    target_include_directories(ledacrypt_13397_clean PRIVATE ${PROJECT_SOURCE_DIR}/src/common/pqclean_shims)
    set(_LEDACRYPT_OBJS ${_LEDACRYPT_OBJS} $<TARGET_OBJECTS:ledacrypt_13397_clean>)
endif()

if(OQS_ENABLE_KEM_ledacrypt_28277)
    add_library(ledacrypt_28277_clean OBJECT kem_ledacrypt_28277.c ledacrypt_28277_clean/aes256.c ledacrypt_28277_clean/bf_decoding.c ledacrypt_28277_clean/dfr_test.c ledacrypt_28277_clean/djbsort.c ledacrypt_28277_clean/gf2x_arith.c ledacrypt_28277_clean/gf2x_arith_mod_xPplusOne.c ledacrypt_28277_clean/H_Q_matrices_generation.c ledacrypt_28277_clean/kem.c ledacrypt_28277_clean/niederreiter_decrypt.c ledacrypt_28277_clean/niederreiter_encrypt.c ledacrypt_28277_clean/niederreiter_keygen.c ledacrypt_28277_clean/rng.c)
    target_include_directories(ledacrypt_28277_clean PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ledacrypt_28277_clean)
    target_include_directories(ledacrypt_28277_clean PRIVATE ${PROJECT_SOURCE_DIR}/src/common/pqclean_shims)
    set(_LEDACRYPT_OBJS ${_LEDACRYPT_OBJS} $<TARGET_OBJECTS:ledacrypt_28277_clean>)
endif()

if(OQS_ENABLE_KEM_ledacrypt_19709)
    add_library(ledacrypt_19709_clean OBJECT kem_ledacrypt_19709.c ledacrypt_19709_clean/aes256.c ledacrypt_19709_clean/bf_decoding.c ledacrypt_19709_clean/dfr_test.c ledacrypt_19709_clean/djbsort.c ledacrypt_19709_clean/gf2x_arith.c ledacrypt_19709_clean/gf2x_arith_mod_xPplusOne.c ledacrypt_19709_clean/H_Q_matrices_generation.c ledacrypt_19709_clean/kem.c ledacrypt_19709_clean/niederreiter_decrypt.c ledacrypt_19709_clean/niederreiter_encrypt.c ledacrypt_19709_clean/niederreiter_keygen.c ledacrypt_19709_clean/rng.c)
    target_include_directories(ledacrypt_19709_clean PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ledacrypt_19709_clean)
    target_include_directories(ledacrypt_19709_clean PRIVATE ${PROJECT_SOURCE_DIR}/src/common/pqclean_shims)
    set(_LEDACRYPT_OBJS ${_LEDACRYPT_OBJS} $<TARGET_OBJECTS:ledacrypt_19709_clean>)
endif()

if(OQS_ENABLE_KEM_ledacrypt_16229)
    add_library(ledacrypt_16229_clean OBJECT kem_ledacrypt_16229.c ledacrypt_16229_clean/aes256.c ledacrypt_16229_clean/bf_decoding.c ledacrypt_16229_clean/dfr_test.c ledacrypt_16229_clean/djbsort.c ledacrypt_16229_clean/gf2x_arith.c ledacrypt_16229_clean/gf2x_arith_mod_xPplusOne.c ledacrypt_16229_clean/H_Q_matrices_generation.c ledacrypt_16229_clean/kem.c ledacrypt_16229_clean/niederreiter_decrypt.c ledacrypt_16229_clean/niederreiter_encrypt.c ledacrypt_16229_clean/niederreiter_keygen.c ledacrypt_16229_clean/rng.c)
    target_include_directories(ledacrypt_16229_clean PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ledacrypt_16229_clean)
    target_include_directories(ledacrypt_16229_clean PRIVATE ${PROJECT_SOURCE_DIR}/src/common/pqclean_shims)
    set(_LEDACRYPT_OBJS ${_LEDACRYPT_OBJS} $<TARGET_OBJECTS:ledacrypt_16229_clean>)
endif()

if(OQS_ENABLE_KEM_ledacrypt_40787)
    add_library(ledacrypt_40787_clean OBJECT kem_ledacrypt_40787.c ledacrypt_40787_clean/aes256.c ledacrypt_40787_clean/bf_decoding.c ledacrypt_40787_clean/dfr_test.c ledacrypt_40787_clean/djbsort.c ledacrypt_40787_clean/gf2x_arith.c ledacrypt_40787_clean/gf2x_arith_mod_xPplusOne.c ledacrypt_40787_clean/H_Q_matrices_generation.c ledacrypt_40787_clean/kem.c ledacrypt_40787_clean/niederreiter_decrypt.c ledacrypt_40787_clean/niederreiter_encrypt.c ledacrypt_40787_clean/niederreiter_keygen.c ledacrypt_40787_clean/rng.c)
    target_include_directories(ledacrypt_40787_clean PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ledacrypt_40787_clean)
    target_include_directories(ledacrypt_40787_clean PRIVATE ${PROJECT_SOURCE_DIR}/src/common/pqclean_shims)
    set(_LEDACRYPT_OBJS ${_LEDACRYPT_OBJS} $<TARGET_OBJECTS:ledacrypt_40787_clean>)
endif()

if(OQS_ENABLE_KEM_ledacrypt_28411)
    add_library(ledacrypt_28411_clean OBJECT kem_ledacrypt_28411.c ledacrypt_28411_clean/aes256.c ledacrypt_28411_clean/bf_decoding.c ledacrypt_28411_clean/dfr_test.c ledacrypt_28411_clean/djbsort.c ledacrypt_28411_clean/gf2x_arith.c ledacrypt_28411_clean/gf2x_arith_mod_xPplusOne.c ledacrypt_28411_clean/H_Q_matrices_generation.c ledacrypt_28411_clean/kem.c ledacrypt_28411_clean/niederreiter_decrypt.c ledacrypt_28411_clean/niederreiter_encrypt.c ledacrypt_28411_clean/niederreiter_keygen.c ledacrypt_28411_clean/rng.c)
    target_include_directories(ledacrypt_28411_clean PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ledacrypt_28411_clean)
    target_include_directories(ledacrypt_28411_clean PRIVATE ${PROJECT_SOURCE_DIR}/src/common/pqclean_shims)
    set(_LEDACRYPT_OBJS ${_LEDACRYPT_OBJS} $<TARGET_OBJECTS:ledacrypt_28411_clean>)
endif()

if(OQS_ENABLE_KEM_ledacrypt_22901)
    add_library(ledacrypt_22901_clean OBJECT kem_ledacrypt_22901.c ledacrypt_22901_clean/aes256.c ledacrypt_22901_clean/bf_decoding.c ledacrypt_22901_clean/dfr_test.c ledacrypt_22901_clean/djbsort.c ledacrypt_22901_clean/gf2x_arith.c ledacrypt_22901_clean/gf2x_arith_mod_xPplusOne.c ledacrypt_22901_clean/H_Q_matrices_generation.c ledacrypt_22901_clean/kem.c ledacrypt_22901_clean/niederreiter_decrypt.c ledacrypt_22901_clean/niederreiter_encrypt.c ledacrypt_22901_clean/niederreiter_keygen.c ledacrypt_22901_clean/rng.c)
    target_include_directories(ledacrypt_22901_clean PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ledacrypt_22901_clean)
    target_include_directories(ledacrypt_22901_clean PRIVATE ${PROJECT_SOURCE_DIR}/src/common/pqclean_shims)
    set(_LEDACRYPT_OBJS ${_LEDACRYPT_OBJS} $<TARGET_OBJECTS:ledacrypt_22901_clean>)
endif()

if(OQS_ENABLE_KEM_ledacrypt_52667)
    add_library(ledacrypt_52667_clean OBJECT kem_ledacrypt_52667.c ledacrypt_52667_clean/aes256.c ledacrypt_52667_clean/bf_decoding.c ledacrypt_52667_clean/dfr_test.c ledacrypt_52667_clean/djbsort.c ledacrypt_52667_clean/gf2x_arith.c ledacrypt_52667_clean/gf2x_arith_mod_xPplusOne.c ledacrypt_52667_clean/H_Q_matrices_generation.c ledacrypt_52667_clean/kem.c ledacrypt_52667_clean/niederreiter_decrypt.c ledacrypt_52667_clean/niederreiter_encrypt.c ledacrypt_52667_clean/niederreiter_keygen.c ledacrypt_52667_clean/rng.c)
    target_include_directories(ledacrypt_52667_clean PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ledacrypt_52667_clean)
    target_include_directories(ledacrypt_52667_clean PRIVATE ${PROJECT_SOURCE_DIR}/src/common/pqclean_shims)
    set(_LEDACRYPT_OBJS ${_LEDACRYPT_OBJS} $<TARGET_OBJECTS:ledacrypt_52667_clean>)
endif()

if(OQS_ENABLE_KEM_ledacrypt_36629)
    add_library(ledacrypt_36629_clean OBJECT kem_ledacrypt_36629.c ledacrypt_36629_clean/aes256.c ledacrypt_36629_clean/bf_decoding.c ledacrypt_36629_clean/dfr_test.c ledacrypt_36629_clean/djbsort.c ledacrypt_36629_clean/gf2x_arith.c ledacrypt_36629_clean/gf2x_arith_mod_xPplusOne.c ledacrypt_36629_clean/H_Q_matrices_generation.c ledacrypt_36629_clean/kem.c ledacrypt_36629_clean/niederreiter_decrypt.c ledacrypt_36629_clean/niederreiter_encrypt.c ledacrypt_36629_clean/niederreiter_keygen.c ledacrypt_36629_clean/rng.c)
    target_include_directories(ledacrypt_36629_clean PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ledacrypt_36629_clean)
    target_include_directories(ledacrypt_36629_clean PRIVATE ${PROJECT_SOURCE_DIR}/src/common/pqclean_shims)
    set(_LEDACRYPT_OBJS ${_LEDACRYPT_OBJS} $<TARGET_OBJECTS:ledacrypt_36629_clean>)
endif()

if(OQS_ENABLE_KEM_ledacrypt_30803)
    add_library(ledacrypt_30803_clean OBJECT kem_ledacrypt_30803.c ledacrypt_30803_clean/aes256.c ledacrypt_30803_clean/bf_decoding.c ledacrypt_30803_clean/dfr_test.c ledacrypt_30803_clean/djbsort.c ledacrypt_30803_clean/gf2x_arith.c ledacrypt_30803_clean/gf2x_arith_mod_xPplusOne.c ledacrypt_30803_clean/H_Q_matrices_generation.c ledacrypt_30803_clean/kem.c ledacrypt_30803_clean/niederreiter_decrypt.c ledacrypt_30803_clean/niederreiter_encrypt.c ledacrypt_30803_clean/niederreiter_keygen.c ledacrypt_30803_clean/rng.c)
    target_include_directories(ledacrypt_30803_clean PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ledacrypt_30803_clean)
    target_include_directories(ledacrypt_30803_clean PRIVATE ${PROJECT_SOURCE_DIR}/src/common/pqclean_shims)
    set(_LEDACRYPT_OBJS ${_LEDACRYPT_OBJS} $<TARGET_OBJECTS:ledacrypt_30803_clean>)
endif()

if(OQS_ENABLE_KEM_ledacrypt_61717)
    add_library(ledacrypt_61717_clean OBJECT kem_ledacrypt_61717.c ledacrypt_61717_clean/aes256.c ledacrypt_61717_clean/bf_decoding.c ledacrypt_61717_clean/dfr_test.c ledacrypt_61717_clean/djbsort.c ledacrypt_61717_clean/gf2x_arith.c ledacrypt_61717_clean/gf2x_arith_mod_xPplusOne.c ledacrypt_61717_clean/H_Q_matrices_generation.c ledacrypt_61717_clean/kem.c ledacrypt_61717_clean/niederreiter_decrypt.c ledacrypt_61717_clean/niederreiter_encrypt.c ledacrypt_61717_clean/niederreiter_keygen.c ledacrypt_61717_clean/rng.c)
    target_include_directories(ledacrypt_61717_clean PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ledacrypt_61717_clean)
    target_include_directories(ledacrypt_61717_clean PRIVATE ${PROJECT_SOURCE_DIR}/src/common/pqclean_shims)
    set(_LEDACRYPT_OBJS ${_LEDACRYPT_OBJS} $<TARGET_OBJECTS:ledacrypt_61717_clean>)
endif()

if(OQS_ENABLE_KEM_ledacrypt_42677)
    add_library(ledacrypt_42677_clean OBJECT kem_ledacrypt_42677.c ledacrypt_42677_clean/aes256.c ledacrypt_42677_clean/bf_decoding.c ledacrypt_42677_clean/dfr_test.c ledacrypt_42677_clean/djbsort.c ledacrypt_42677_clean/gf2x_arith.c ledacrypt_42677_clean/gf2x_arith_mod_xPplusOne.c ledacrypt_42677_clean/H_Q_matrices_generation.c ledacrypt_42677_clean/kem.c ledacrypt_42677_clean/niederreiter_decrypt.c ledacrypt_42677_clean/niederreiter_encrypt.c ledacrypt_42677_clean/niederreiter_keygen.c ledacrypt_42677_clean/rng.c)
    target_include_directories(ledacrypt_42677_clean PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ledacrypt_42677_clean)
    target_include_directories(ledacrypt_42677_clean PRIVATE ${PROJECT_SOURCE_DIR}/src/common/pqclean_shims)
    set(_LEDACRYPT_OBJS ${_LEDACRYPT_OBJS} $<TARGET_OBJECTS:ledacrypt_42677_clean>)
endif()

if(OQS_ENABLE_KEM_ledacrypt_35507)
    add_library(ledacrypt_35507_clean OBJECT kem_ledacrypt_35507.c ledacrypt_35507_clean/aes256.c ledacrypt_35507_clean/bf_decoding.c ledacrypt_35507_clean/dfr_test.c ledacrypt_35507_clean/djbsort.c ledacrypt_35507_clean/gf2x_arith.c ledacrypt_35507_clean/gf2x_arith_mod_xPplusOne.c ledacrypt_35507_clean/H_Q_matrices_generation.c ledacrypt_35507_clean/kem.c ledacrypt_35507_clean/niederreiter_decrypt.c ledacrypt_35507_clean/niederreiter_encrypt.c ledacrypt_35507_clean/niederreiter_keygen.c ledacrypt_35507_clean/rng.c)
    target_include_directories(ledacrypt_35507_clean PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ledacrypt_35507_clean)
    target_include_directories(ledacrypt_35507_clean PRIVATE ${PROJECT_SOURCE_DIR}/src/common/pqclean_shims)
    set(_LEDACRYPT_OBJS ${_LEDACRYPT_OBJS} $<TARGET_OBJECTS:ledacrypt_35507_clean>)
endif()

if(OQS_ENABLE_KEM_ledacrypt_83579)
    add_library(ledacrypt_83579_clean OBJECT kem_ledacrypt_83579.c ledacrypt_83579_clean/aes256.c ledacrypt_83579_clean/bf_decoding.c ledacrypt_83579_clean/dfr_test.c ledacrypt_83579_clean/djbsort.c ledacrypt_83579_clean/gf2x_arith.c ledacrypt_83579_clean/gf2x_arith_mod_xPplusOne.c ledacrypt_83579_clean/H_Q_matrices_generation.c ledacrypt_83579_clean/kem.c ledacrypt_83579_clean/niederreiter_decrypt.c ledacrypt_83579_clean/niederreiter_encrypt.c ledacrypt_83579_clean/niederreiter_keygen.c ledacrypt_83579_clean/rng.c)
    target_include_directories(ledacrypt_83579_clean PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ledacrypt_83579_clean)
    target_include_directories(ledacrypt_83579_clean PRIVATE ${PROJECT_SOURCE_DIR}/src/common/pqclean_shims)
    set(_LEDACRYPT_OBJS ${_LEDACRYPT_OBJS} $<TARGET_OBJECTS:ledacrypt_83579_clean>)
endif()

if(OQS_ENABLE_KEM_ledacrypt_58171)
    add_library(ledacrypt_58171_clean OBJECT kem_ledacrypt_58171.c ledacrypt_58171_clean/aes256.c ledacrypt_58171_clean/bf_decoding.c ledacrypt_58171_clean/dfr_test.c ledacrypt_58171_clean/djbsort.c ledacrypt_58171_clean/gf2x_arith.c ledacrypt_58171_clean/gf2x_arith_mod_xPplusOne.c ledacrypt_58171_clean/H_Q_matrices_generation.c ledacrypt_58171_clean/kem.c ledacrypt_58171_clean/niederreiter_decrypt.c ledacrypt_58171_clean/niederreiter_encrypt.c ledacrypt_58171_clean/niederreiter_keygen.c ledacrypt_58171_clean/rng.c)
    target_include_directories(ledacrypt_58171_clean PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ledacrypt_58171_clean)
    target_include_directories(ledacrypt_58171_clean PRIVATE ${PROJECT_SOURCE_DIR}/src/common/pqclean_shims)
    set(_LEDACRYPT_OBJS ${_LEDACRYPT_OBJS} $<TARGET_OBJECTS:ledacrypt_58171_clean>)
endif()

if(OQS_ENABLE_KEM_ledacrypt_48371)
    add_library(ledacrypt_48371_clean OBJECT kem_ledacrypt_48371.c ledacrypt_48371_clean/aes256.c ledacrypt_48371_clean/bf_decoding.c ledacrypt_48371_clean/dfr_test.c ledacrypt_48371_clean/djbsort.c ledacrypt_48371_clean/gf2x_arith.c ledacrypt_48371_clean/gf2x_arith_mod_xPplusOne.c ledacrypt_48371_clean/H_Q_matrices_generation.c ledacrypt_48371_clean/kem.c ledacrypt_48371_clean/niederreiter_decrypt.c ledacrypt_48371_clean/niederreiter_encrypt.c ledacrypt_48371_clean/niederreiter_keygen.c ledacrypt_48371_clean/rng.c)
    target_include_directories(ledacrypt_48371_clean PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ledacrypt_48371_clean)
    target_include_directories(ledacrypt_48371_clean PRIVATE ${PROJECT_SOURCE_DIR}/src/common/pqclean_shims)
    set(_LEDACRYPT_OBJS ${_LEDACRYPT_OBJS} $<TARGET_OBJECTS:ledacrypt_48371_clean>)
endif()

if(OQS_ENABLE_KEM_ledacrypt_cpa_10883)
    add_library(ledacrypt_cpa_10883_clean OBJECT kem_ledacrypt_cpa_10883.c ledacrypt_cpa_10883_clean/aes256.c ledacrypt_cpa_10883_clean/bf_decoding.c ledacrypt_cpa_10883_clean/dfr_test.c ledacrypt_cpa_10883_clean/djbsort.c ledacrypt_cpa_10883_clean/gf2x_arith.c ledacrypt_cpa_10883_clean/gf2x_arith_mod_xPplusOne.c ledacrypt_cpa_10883_clean/H_Q_matrices_generation.c ledacrypt_cpa_10883_clean/kem.c ledacrypt_cpa_10883_clean/niederreiter_decrypt.c ledacrypt_cpa_10883_clean/niederreiter_encrypt.c ledacrypt_cpa_10883_clean/niederreiter_keygen.c ledacrypt_cpa_10883_clean/rng.c)
    target_include_directories(ledacrypt_cpa_10883_clean PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ledacrypt_cpa_10883_clean)
    target_include_directories(ledacrypt_cpa_10883_clean PRIVATE ${PROJECT_SOURCE_DIR}/src/common/pqclean_shims)
    set(_LEDACRYPT_OBJS ${_LEDACRYPT_OBJS} $<TARGET_OBJECTS:ledacrypt_cpa_10883_clean>)
endif()
if(OQS_ENABLE_KEM_ledacrypt_cpa_8237)
    add_library(ledacrypt_cpa_8237_clean OBJECT kem_ledacrypt_cpa_8237.c ledacrypt_cpa_8237_clean/aes256.c ledacrypt_cpa_8237_clean/bf_decoding.c ledacrypt_cpa_8237_clean/dfr_test.c ledacrypt_cpa_8237_clean/djbsort.c ledacrypt_cpa_8237_clean/gf2x_arith.c ledacrypt_cpa_8237_clean/gf2x_arith_mod_xPplusOne.c ledacrypt_cpa_8237_clean/H_Q_matrices_generation.c ledacrypt_cpa_8237_clean/kem.c ledacrypt_cpa_8237_clean/niederreiter_decrypt.c ledacrypt_cpa_8237_clean/niederreiter_encrypt.c ledacrypt_cpa_8237_clean/niederreiter_keygen.c ledacrypt_cpa_8237_clean/rng.c)
    target_include_directories(ledacrypt_cpa_8237_clean PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ledacrypt_cpa_8237_clean)
    target_include_directories(ledacrypt_cpa_8237_clean PRIVATE ${PROJECT_SOURCE_DIR}/src/common/pqclean_shims)
    set(_LEDACRYPT_OBJS ${_LEDACRYPT_OBJS} $<TARGET_OBJECTS:ledacrypt_cpa_8237_clean>)
endif()
if(OQS_ENABLE_KEM_ledacrypt_cpa_7187)
    add_library(ledacrypt_cpa_7187_clean OBJECT kem_ledacrypt_cpa_7187.c ledacrypt_cpa_7187_clean/aes256.c ledacrypt_cpa_7187_clean/bf_decoding.c ledacrypt_cpa_7187_clean/dfr_test.c ledacrypt_cpa_7187_clean/djbsort.c ledacrypt_cpa_7187_clean/gf2x_arith.c ledacrypt_cpa_7187_clean/gf2x_arith_mod_xPplusOne.c ledacrypt_cpa_7187_clean/H_Q_matrices_generation.c ledacrypt_cpa_7187_clean/kem.c ledacrypt_cpa_7187_clean/niederreiter_decrypt.c ledacrypt_cpa_7187_clean/niederreiter_encrypt.c ledacrypt_cpa_7187_clean/niederreiter_keygen.c ledacrypt_cpa_7187_clean/rng.c)
    target_include_directories(ledacrypt_cpa_7187_clean PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ledacrypt_cpa_7187_clean)
    target_include_directories(ledacrypt_cpa_7187_clean PRIVATE ${PROJECT_SOURCE_DIR}/src/common/pqclean_shims)
    set(_LEDACRYPT_OBJS ${_LEDACRYPT_OBJS} $<TARGET_OBJECTS:ledacrypt_cpa_7187_clean>)
endif()
if(OQS_ENABLE_KEM_ledacrypt_cpa_21011)
    add_library(ledacrypt_cpa_21011_clean OBJECT kem_ledacrypt_cpa_21011.c ledacrypt_cpa_21011_clean/aes256.c ledacrypt_cpa_21011_clean/bf_decoding.c ledacrypt_cpa_21011_clean/dfr_test.c ledacrypt_cpa_21011_clean/djbsort.c ledacrypt_cpa_21011_clean/gf2x_arith.c ledacrypt_cpa_21011_clean/gf2x_arith_mod_xPplusOne.c ledacrypt_cpa_21011_clean/H_Q_matrices_generation.c ledacrypt_cpa_21011_clean/kem.c ledacrypt_cpa_21011_clean/niederreiter_decrypt.c ledacrypt_cpa_21011_clean/niederreiter_encrypt.c ledacrypt_cpa_21011_clean/niederreiter_keygen.c ledacrypt_cpa_21011_clean/rng.c)
    target_include_directories(ledacrypt_cpa_21011_clean PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ledacrypt_cpa_21011_clean)
    target_include_directories(ledacrypt_cpa_21011_clean PRIVATE ${PROJECT_SOURCE_DIR}/src/common/pqclean_shims)
    set(_LEDACRYPT_OBJS ${_LEDACRYPT_OBJS} $<TARGET_OBJECTS:ledacrypt_cpa_21011_clean>)
endif()
if(OQS_ENABLE_KEM_ledacrypt_cpa_15373)
    add_library(ledacrypt_cpa_15373_clean OBJECT kem_ledacrypt_cpa_15373.c ledacrypt_cpa_15373_clean/aes256.c ledacrypt_cpa_15373_clean/bf_decoding.c ledacrypt_cpa_15373_clean/dfr_test.c ledacrypt_cpa_15373_clean/djbsort.c ledacrypt_cpa_15373_clean/gf2x_arith.c ledacrypt_cpa_15373_clean/gf2x_arith_mod_xPplusOne.c ledacrypt_cpa_15373_clean/H_Q_matrices_generation.c ledacrypt_cpa_15373_clean/kem.c ledacrypt_cpa_15373_clean/niederreiter_decrypt.c ledacrypt_cpa_15373_clean/niederreiter_encrypt.c ledacrypt_cpa_15373_clean/niederreiter_keygen.c ledacrypt_cpa_15373_clean/rng.c)
    target_include_directories(ledacrypt_cpa_15373_clean PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ledacrypt_cpa_15373_clean)
    target_include_directories(ledacrypt_cpa_15373_clean PRIVATE ${PROJECT_SOURCE_DIR}/src/common/pqclean_shims)
    set(_LEDACRYPT_OBJS ${_LEDACRYPT_OBJS} $<TARGET_OBJECTS:ledacrypt_cpa_15373_clean>)
endif()
if(OQS_ENABLE_KEM_ledacrypt_cpa_13109)
    add_library(ledacrypt_cpa_13109_clean OBJECT kem_ledacrypt_cpa_13109.c ledacrypt_cpa_13109_clean/aes256.c ledacrypt_cpa_13109_clean/bf_decoding.c ledacrypt_cpa_13109_clean/dfr_test.c ledacrypt_cpa_13109_clean/djbsort.c ledacrypt_cpa_13109_clean/gf2x_arith.c ledacrypt_cpa_13109_clean/gf2x_arith_mod_xPplusOne.c ledacrypt_cpa_13109_clean/H_Q_matrices_generation.c ledacrypt_cpa_13109_clean/kem.c ledacrypt_cpa_13109_clean/niederreiter_decrypt.c ledacrypt_cpa_13109_clean/niederreiter_encrypt.c ledacrypt_cpa_13109_clean/niederreiter_keygen.c ledacrypt_cpa_13109_clean/rng.c)
    target_include_directories(ledacrypt_cpa_13109_clean PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ledacrypt_cpa_13109_clean)
    target_include_directories(ledacrypt_cpa_13109_clean PRIVATE ${PROJECT_SOURCE_DIR}/src/common/pqclean_shims)
    set(_LEDACRYPT_OBJS ${_LEDACRYPT_OBJS} $<TARGET_OBJECTS:ledacrypt_cpa_13109_clean>)
endif()
if(OQS_ENABLE_KEM_ledacrypt_cpa_35339)
    add_library(ledacrypt_cpa_35339_clean OBJECT kem_ledacrypt_cpa_35339.c ledacrypt_cpa_35339_clean/aes256.c ledacrypt_cpa_35339_clean/bf_decoding.c ledacrypt_cpa_35339_clean/dfr_test.c ledacrypt_cpa_35339_clean/djbsort.c ledacrypt_cpa_35339_clean/gf2x_arith.c ledacrypt_cpa_35339_clean/gf2x_arith_mod_xPplusOne.c ledacrypt_cpa_35339_clean/H_Q_matrices_generation.c ledacrypt_cpa_35339_clean/kem.c ledacrypt_cpa_35339_clean/niederreiter_decrypt.c ledacrypt_cpa_35339_clean/niederreiter_encrypt.c ledacrypt_cpa_35339_clean/niederreiter_keygen.c ledacrypt_cpa_35339_clean/rng.c)
    target_include_directories(ledacrypt_cpa_35339_clean PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ledacrypt_cpa_35339_clean)
    target_include_directories(ledacrypt_cpa_35339_clean PRIVATE ${PROJECT_SOURCE_DIR}/src/common/pqclean_shims)
    set(_LEDACRYPT_OBJS ${_LEDACRYPT_OBJS} $<TARGET_OBJECTS:ledacrypt_cpa_35339_clean>)
endif()
if(OQS_ENABLE_KEM_ledacrypt_cpa_25603)
    add_library(ledacrypt_cpa_25603_clean OBJECT kem_ledacrypt_cpa_25603.c ledacrypt_cpa_25603_clean/aes256.c ledacrypt_cpa_25603_clean/bf_decoding.c ledacrypt_cpa_25603_clean/dfr_test.c ledacrypt_cpa_25603_clean/djbsort.c ledacrypt_cpa_25603_clean/gf2x_arith.c ledacrypt_cpa_25603_clean/gf2x_arith_mod_xPplusOne.c ledacrypt_cpa_25603_clean/H_Q_matrices_generation.c ledacrypt_cpa_25603_clean/kem.c ledacrypt_cpa_25603_clean/niederreiter_decrypt.c ledacrypt_cpa_25603_clean/niederreiter_encrypt.c ledacrypt_cpa_25603_clean/niederreiter_keygen.c ledacrypt_cpa_25603_clean/rng.c)
    target_include_directories(ledacrypt_cpa_25603_clean PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ledacrypt_cpa_25603_clean)
    target_include_directories(ledacrypt_cpa_25603_clean PRIVATE ${PROJECT_SOURCE_DIR}/src/common/pqclean_shims)
    set(_LEDACRYPT_OBJS ${_LEDACRYPT_OBJS} $<TARGET_OBJECTS:ledacrypt_cpa_25603_clean>)
endif()
if(OQS_ENABLE_KEM_ledacrypt_cpa_21611)
    add_library(ledacrypt_cpa_21611_clean OBJECT kem_ledacrypt_cpa_21611.c ledacrypt_cpa_21611_clean/aes256.c ledacrypt_cpa_21611_clean/bf_decoding.c ledacrypt_cpa_21611_clean/dfr_test.c ledacrypt_cpa_21611_clean/djbsort.c ledacrypt_cpa_21611_clean/gf2x_arith.c ledacrypt_cpa_21611_clean/gf2x_arith_mod_xPplusOne.c ledacrypt_cpa_21611_clean/H_Q_matrices_generation.c ledacrypt_cpa_21611_clean/kem.c ledacrypt_cpa_21611_clean/niederreiter_decrypt.c ledacrypt_cpa_21611_clean/niederreiter_encrypt.c ledacrypt_cpa_21611_clean/niederreiter_keygen.c ledacrypt_cpa_21611_clean/rng.c)
    target_include_directories(ledacrypt_cpa_21611_clean PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ledacrypt_cpa_21611_clean)
    target_include_directories(ledacrypt_cpa_21611_clean PRIVATE ${PROJECT_SOURCE_DIR}/src/common/pqclean_shims)
    set(_LEDACRYPT_OBJS ${_LEDACRYPT_OBJS} $<TARGET_OBJECTS:ledacrypt_cpa_21611_clean>)
endif()


set(LEDACRYPT_OBJS ${_LEDACRYPT_OBJS} PARENT_SCOPE)